--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_NAME=expertise_station
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=expertise-station-secure-jwt-secret-key
+VITE_API_URL=http://localhost:5000
