--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.156.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -51,13 +52,14 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
