--- a/src/server/package.json
+++ b/src/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
