--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ DB_NAME=expertise_station
 PORT=5000
 NODE_ENV=development
 JWT_SECRET=expertise-station-secure-jwt-secret-key
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://192.168.1.14:5000
+# VITE_API_URL=http://192.168.0.120:5000
