removed base extension /exp

--- a/.env
+++ b/.env
@@ -1,9 +1,3 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=your_password
-DB_NAME=expertise_station
-PORT=5000
-NODE_ENV=development
+
 JWT_SECRET=expertise-station-secure-jwt-secret-key
-VITE_API_URL=http://192.168.1.14:5000
-# VITE_API_URL=http://192.168.0.120:5000
+VITE_API_URL=http://expertisestation-env.eba-7txxvdi2.us-east-1.elasticbeanstalk.com
