--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
 JWT_SECRET=expertise-station-secure-jwt-secret-key
-VITE_API_URL=http://expertisestation-env.eba-7txxvdi2.us-east-1.elasticbeanstalk.com
+VITE_API_URL=https://apis.naukarinavigator.com
