Changes to be committed: 	modified:   .env 	new file:   Booking_API_Testing_Instructions.md 	new file:   bookings_api_output.txt 	new file:   manual_update_Session_instructions.txt 	modified:   package-lock.json 	modified:   package.json 	modified:   src/App.tsx 	modified:   src/components/Auth/ExpertForm.tsx 	modified:   src/components/Auth/SeekerForm.tsx 	new file:   src/components/SeekerAppointmentLog.js	modified:   src/components/dashboard/ExpertDashboard.tsx 	modified:   src/components/dashboard/ProfileSection.tsx 	new file:   src/components/dashboard/RecentReviews.tsx 	new file:   src/components/dashboard/StatsSection.tsx 	new file:   src/components/dashboard/UpcomingAppointments.tsx 	modified:   src/components/layout/Navbar.tsx 	modified:   src/components/network/ExpertNetwork.tsx 	new file:   src/components/session/AgoraVideoCall.tsx 	new file:   src/components/session/ChatSession.tsx 	new file:   src/config/api.ts 	modified:   src/database/schema.sql 	modified:   src/pages/Appointment_log.tsx 	new file:   src/pages/DirectVideoCall.tsx 	modified:   src/pages/ExpertProfile.tsx 	new file:   src/pages/Notifications.tsx 	modified:   src/pages/Session.tsx 	new file:   src/pages/SimpleSession.tsx 	new file:   src/pages/TestCall.tsx 	new file:   src/pages/TestChat.tsx 	new file:   src/pages/TestVideoCall.tsx 	modified:   src/server/.env.production 	new file:   src/server/cron-jobs.js 	new file:   src/server/fix-database.js 	new file:   src/server/index.js 	new file:   src/server/routes/agora-token.js 	new file:   src/server/routes/agora.js 	modified:   src/server/routes/auth.js 	modified:   src/server/routes/bookings.js 	modified:   src/server/routes/experts.js 	new file:   src/server/routes/notifications.js 	modified:   src/server/routes/sessions.js 	new file:   src/server/routes/test.js 	new file:   src/server/routes/users.js 	modified:   src/server/server.js 	new file:   src/server/utils/notifications.js 	modified:   src/services/api.ts 	new file:   src/types/ag

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 
 JWT_SECRET=expertise-station-secure-jwt-secret-key
-VITE_API_URL=https://apis.naukarinavigator.com
+VITE_API_URL=http://192.168.1.8:8081
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=rohitdogra@23
+DB_NAME=expertise_station
+PORT=8081
+
+
+
+
