--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.156.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "agora-access-token": "^2.0.4",
+    "agora-rtc-sdk-ng": "^4.23.3",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -95,6 +98,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-mkcert": "^1.17.8"
   }
 }
