--- a/src/server/.env.production
+++ b/src/server/.env.production
@@ -3,10 +3,14 @@ DB_HOST=localhost
 DB_USER=brenston_expv2user
 DB_PASSWORD=&OX4)LKCNqNO
 DB_NAME=brenston_exp_v2
+DB_PORT=3306
 
 # Server Configuration
-PORT=5000
+PORT=3000
 NODE_ENV=production
 
 # Frontend URL (Update this with your domain)
 FRONTEND_URL=https://expertisestation.com/exp
+
+
+JWT_SECRET=expertise-station-secure-jwt-secret-key
