Updated .env file...

--- a/.env
+++ b/.env
@@ -1,13 +1,15 @@
 
-JWT_SECRET=expertise-station-secure-jwt-secret-key
-VITE_API_URL=http://192.168.1.8:8081
-
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=rohitdogra@23
+# Database Configuration
+DB_HOST=expertisestation.cebaksuqqszm.us-east-1.rds.amazonaws.com
+DB_PORT=3306
+DB_USER=Expertise
+DB_PASSWORD=EXPERTISEBRENSTONE
 DB_NAME=expertise_station
-PORT=8081
+# Server Configuration
+PORT=8080
+NODE_ENV=production
 
+VITE_API_URL=http://localhost:8080
 
-
-
+# Frontend URL (Update this with your domain)
+FRONTEND_URL=https://exp-frontend-862027265832.asia-south1.run.app/
