--- a/.env
+++ b/.env
@@ -1,18 +1,3 @@
-
-# JWT_SECRET=expertise-station-secure-jwt-secret-key
-# VITE_API_URL=http://192.168.1.8:8081
-# # VITE_API_URL=http://192.168.1.32:8081
-# # VITE_API_URL=http://192.168.0.137:8081
-
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=vishnu@123
-# DB_NAME=expertise_station
-# PORT=8081
-
-
-
-
 # Database Configuration
 DB_HOST=expertisestation.cebaksuqqszm.us-east-1.rds.amazonaws.com
 DB_PORT=3306
@@ -24,6 +9,10 @@ PORT=8080
 NODE_ENV=production
 
 # VITE_API_URL=http://localhost:8080
+VITE_API_URL=  https://api.naukarinavigator.com/
 
 # Frontend URL (Update this with your domain)
 FRONTEND_URL=https://exp-frontend-862027265832.asia-south1.run.app/
+
+
+
