Updated .env file...

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ PORT=8080
 NODE_ENV=production
 
 # VITE_API_URL=http://localhost:8080
-VITE_API_URL=  https://api.naukarinavigator.com/
+VITE_API_URL=  https://api.naukarinavigator.com
 
 # Frontend URL (Update this with your domain)
 FRONTEND_URL=https://exp-frontend-862027265832.asia-south1.run.app/
