--- a/.env
+++ b/.env
@@ -1,19 +1,37 @@
-# Database Configuration
-DB_HOST=expertisestation.cebaksuqqszm.us-east-1.rds.amazonaws.com
-DB_PORT=3306
-DB_USER=Expertise
-DB_PASSWORD=EXPERTISEBRENSTONE
+# # Database Configuration
+# DB_HOST=expertisestation.cebaksuqqszm.us-east-1.rds.amazonaws.com
+# DB_PORT=3306
+# DB_USER=Expertise
+# DB_PASSWORD=EXPERTISEBRENSTONE
+# DB_NAME=expertise_station
+# # Server Configuration
+# PORT=8080
+# NODE_ENV=production
+
+# # VITE_API_URL=http://localhost:8080
+# VITE_API_URL=  https://api.naukarinavigator.com
+
+# # Frontend URL (Update this with your domain)
+# FRONTEND_URL=https://exp-frontend-862027265832.asia-south1.run.app/
+
+# JWT_SECRET=expertise-station-secure-jwt-secret-key
+
+#    VITE_WS_PORT=8000  # or whatever port your WebSocket server uses
+
+
+
+
+
+JWT_SECRET=expertise-station-secure-jwt-secret-key
+VITE_API_URL=http://192.168.1.8:8080
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=rohitdogra@23
 DB_NAME=expertise_station
-# Server Configuration
 PORT=8080
-NODE_ENV=production
 
-# VITE_API_URL=http://localhost:8080
-VITE_API_URL=  https://api.naukarinavigator.com
-
-# Frontend URL (Update this with your domain)
-FRONTEND_URL=https://exp-frontend-862027265832.asia-south1.run.app/
-
+JWT_SECRET=expertise-station-secure-jwt-secret-key
 
 
    VITE_WS_PORT=8000  # or whatever port your WebSocket server uses
