--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
