--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "core-js": "^3.42.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "docx": "^9.3.0",
@@ -60,7 +61,7 @@
     "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
-    "lucide-react": "^0.462.0",
+    "lucide-react": "^0.298.0",
     "next-themes": "^0.3.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
@@ -95,6 +96,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "jwt-decode": "^3.1.2",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
